test_programs/compile_failure/nested_vector_declared_type/src/main.nr
fn main(x: Field, y: pub Field) {
    assert(x != y);

    let vector: [[Field]] = [];
    assert(vector.len() != 10);
}
